# RustEKC

./: .gitignore  Makefile  README.md  default.dtb  default.dts  package-lock.json  package.json  virt.dtb  virt.dts  zImage  zImage_standard
codes/arch/allwinner_D1H/: linker.ld  run.sh
codes/arch/k210/: linker.ld  run.sh
codes/arch/qemu_vexpressa9_armv7/: debug.sh  linker.ld  run.sh
codes/arch/qemu_virt_aarch64/: Cargo.toml  debug.sh  linker.ld  run.sh
codes/arch/qemu_virt_arm/: Cargo.toml  build.rs  debug.sh  linker.ld  run.sh
codes/arch/qemu_virt_riscv64/: Cargo.toml  debug.sh  linker.ld  run.sh
codes/arch/qemu_virt_riscv64/src/: config.rs  entry.asm  lib.rs  nk_gate.S  nk_gate.rs  pte.rs
codes/arch/qemu_virt_riscv64/src/trap/: mod.rs  trap.S
codes/arch/qemu_virt_riscv64/src/util/: console.rs
codes/arch/raspberry_pi4/: Cargo.toml  debug.sh  linker.ld  run.sh
codes/arch/raspberry_pi4/src/: config.rs  entry.rs  lib.rs  nk_gate.S  pte.rs  top.S
codes/arch/raspberry_pi4/src/trap/: gicv2.rs  mod.rs
codes/arch/raspberry_pi4/src/util/: console.rs  gpio.rs  mod.rs  pl011.rs
codes/ekc/: Cargo.toml  Cargo.toml.template  Makefile  armv5te-none-eabi.json
codes/ekc/.cargo/: config.toml
docs/: deploy-to-other-kernel.md  deploy-to-other-platform.md  quick-start.md
lib/: note.md
lib/libekc/: Makefile
payloads/: rcc_mmk_qemu_virt_riscv64.elf
tools/fw_jump/: Makefile  fake_rom.lds  main.c  my_stdio.c  my_stdio.h  param.h  start.S  uart.c  uart.h
tools/pi4b_fel_tool/: Makefile  pi4b.dts
tools/ssh_client/: README.md  ssl_client.out  ssl_keygen.out
(+101 files in other folders)
